fix: aggressively hide scrollbar in ChallengeSection

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -188,13 +188,11 @@ html {
   font-size: var(--font-size);
 }
 
-@layer utilities {
-  .hide-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
+.hide-scrollbar {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
+}
 
-  .hide-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none !important;
 }
